--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-helmet": "^6.1.6",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
+    "cypress": "^12.0.2",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.6.4",
